--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,18 @@
+.login {
+	border: 2px black solid;
+	padding: 60px;
+}
+.login TextField {
+	margin: 10px 10px;
+}
+#root {
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+}
+
 .App {
 	text-align: center;
 }
@@ -9,8 +24,9 @@
 
 * {
 	box-sizing: border-box;
-	margin: 0;
-	padding: 0;
+}
+html {
+	height: 100%;
 }
 
 body {
@@ -19,6 +35,7 @@ body {
 	line-height: 1.6;
 	background-color: #fff;
 	color: #333;
+	height: 100%;
 }
 
 @media (prefers-reduced-motion: no-preference) {
