--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,16 +1,16 @@
 .login {
 	border: 2px black solid;
-	padding: 60px;
+	padding: 40px;
+	width: 35%;
+	margin: 120px auto;
 }
-.login TextField {
-	margin: 10px 10px;
-}
+
 #root {
 	height: 100%;
-	display: flex;
+	/* display: flex;
 	flex-direction: column;
 	align-items: center;
-	justify-content: center;
+	justify-content: center; */
 }
 
 .App {
@@ -36,6 +36,7 @@ body {
 	background-color: #fff;
 	color: #333;
 	height: 100%;
+	padding-top: 60px;
 }
 
 @media (prefers-reduced-motion: no-preference) {
