--- a/client/src/App.css
+++ b/client/src/App.css
@@ -33,7 +33,7 @@ body {
 	font-family: 'Raleway', sans-serif;
 	font-size: 1rem;
 	line-height: 1.6;
-	background-color: #fff;
+	background-color: '##ecf0f1';
 	color: #333;
 	height: 100%;
 	padding-top: 60px;
